--- a/AngularJs.Demo/AngularJs.Demo.csproj
+++ b/AngularJs.Demo/AngularJs.Demo.csproj
@@ -277,7 +277,10 @@
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Client\Scripts\atTheAlbum.js" />
+    <Content Include="Client\Scripts\DetailsController.js" />
     <Content Include="Client\Scripts\ListAlbum.js" />
+    <Content Include="Client\Views\details.html" />
+    <Content Include="Client\Views\list.html" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
